--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYSYRF5P1L"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-HYSYRF5P1L');
-    </script>
-    -->
-
 	<title>Social Solution &mdash; Sua Empresa na Internet</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +13,36 @@
     <link rel="stylesheet" href="css/particles.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/modal-nossos-planos.css">
+
+    <script type="text/javascript" src="js/scroll.js" async></script>
+    <script type="text/javascript" src="js/particles.js" defer></script>
+    <script type="text/javascript" src="js/particles-app.js" defer></script>
+
+    <!-- Google reCAPTCHA -->
+    <script src='https://www.google.com/recaptcha/api.js' defer></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYSYRF5P1L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HYSYRF5P1L');
+    </script>
+
+    <!-- Tawk.to -->
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/5fd7d8c3a8a254155ab35149/1ephidevo';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
 </head>
 <body>
 
@@ -510,28 +529,6 @@
 
 <!-- -->
 <!-- SCRIPTS -->
-<!-- -->
-<script type="text/javascript" src="js/particles.js" defer></script>
-<script type="text/javascript" src="js/particles-app.js" defer></script>
-<script type="text/javascript" src="js/scroll.js" async></script>
-
-<!-- Tawk.to -->
-<script type="text/javascript">
-	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/5fd7d8c3a8a254155ab35149/1ephidevo';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
-</script>
-
-    <!-- Google reCAPTCHA -->
-<script src='https://www.google.com/recaptcha/api.js'></script>
-
-
 <!-- BLOQUEIO do botão direito do mouse -->
 <script>
     if (document.addEventListener) {
