--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-2">
                 <div class="l-box">
 
-                    <form method="POST" class="pure-form pure-form-stacked" action="https://www.socialsolution.com.br/php/form-process.php">
+                    <form class="pure-form pure-form-stacked"> <!-- method="POST" action="https://www.socialsolution.com.br/php/form-process.php"> -->
                         <fieldset>
 
                             <input name="name" type="text" placeholder="Seu Nome" required="">
@@ -314,7 +314,7 @@
                             <br>
                             <div class="g-recaptcha" data-sitekey="6Le5CQwaAAAAAE462qXvJK-Plk4m8gI7z4QgVgwv"></div>
 
-                            <button id="form-submit" type="submit" class="pure-button submit-color">Enviar</button>
+                            <button  id="form-submit" type="submit" class="pure-button submit-color">Enviar</button>
                             
                         </fieldset>
                     </form>
@@ -529,8 +529,12 @@
 
 <!-- -->
 <!-- SCRIPTS -->
-<!-- BLOQUEIO do botão direito do mouse -->
 <script>
+/* Nota de aviso - formulário de contato */
+document.getElementById("form-submit").innerHTML = "Nota: a empresa descrita neste site é fícticia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution "; 
+	
+	
+/* BLOQUEIO do botão direito do mouse */
     if (document.addEventListener) {
         document.addEventListener("contextmenu", function(e) {
             e.preventDefault();
