--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <br>
                             <div class="g-recaptcha" data-sitekey="6Le5CQwaAAAAAE462qXvJK-Plk4m8gI7z4QgVgwv"></div>
 
-                            <button 
-				<script> window.alert("Nota: a empresa descrita neste site é fícticia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution");  </script>
+                            <button
+				    onclick="alert('Nota: a empresa descrita neste site é fictícia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution' 
 				    id="form-submit" type="submit" class="pure-button submit-color">Enviar</button>
                             
                         </fieldset>
