--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
                             <button
 				    onclick="alert('Nota: a empresa descrita neste site é fictícia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution')"    
-				    id="form-submit" type="submit" class="pure-button submit-color">Enviar</button>
+				    id="form-submit" class="pure-button submit-color">Enviar</button> <!-- type="submit" -->
                             
                         </fieldset>
                     </form>
