--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <div class="g-recaptcha" data-sitekey="6Le5CQwaAAAAAE462qXvJK-Plk4m8gI7z4QgVgwv"></div>
 
                             <button
-				    onclick="alert('Nota: a empresa descrita neste site é fictícia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution')"    
+				    onclick="alert('NOTA: a empresa descrita neste site é fictícia, não existe - mas o site está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail, neste site é usado Google Analytics e reCAPTCHA e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution')"    
 				    id="form-submit" class="pure-button submit-color">Enviar</button> <!-- type="submit" -->
                             
                         </fieldset>
