--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
     </div> <!-- content id="contato" -->
 
     <div id="social-divscroll">
+        <a title="Veja o código deste site" class="social-link" href="https://github.com/thiagohauck/socialsolution">
+            <i class="fab fa-github"></i>
+        </a>
+	    
         <a title="Siga-nos no Facebook" class="social-link" href="https://facebook.com/socialsolutiondigital" target="_blank">
             <i class="fab fa-facebook"> </i>
         </a>
