--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-2">
                 <div class="l-box">
 
-                    <form class="pure-form pure-form-stacked"> <!-- method="POST" action="https://www.socialsolution.com.br/php/form-process.php"> -->
+                    <form class="pure-form pure-form-stacked"> <!-- method="POST" action="/php/form-process.php"> -->
                         <fieldset>
 
                             <input name="name" type="text" placeholder="Seu Nome" required="">
@@ -315,7 +315,7 @@
                             <div class="g-recaptcha" data-sitekey="6Le5CQwaAAAAAE462qXvJK-Plk4m8gI7z4QgVgwv"></div>
 
                             <button
-				    onclick="alert('NOTA: a empresa descrita neste site é fictícia, não existe - mas o site desenvolvido está totalmente funcional, o formulário de contato usa PHP para enviar os dados por e-mail, neste site é usado Google Analytics e reCAPTCHA e o código (menos os arquivos em PHP) pode ser visto aqui: https://github.com/thiagohauck/socialsolution')"    
+				    onclick="alert('NOTA: a empresa descrita neste site é fictícia, não existe - mas o site desenvolvido está totalmente funcional, o formulário de contato foi testado com PHP para enviar os dados por e-mail. Neste site é usado Google Analytics e reCAPTCHA.')"    
 				    id="form-submit" class="pure-button submit-color">Enviar</button> <!-- type="submit" -->
                             
                         </fieldset>
@@ -339,7 +339,7 @@
                     <a class="a-link" href="mailto:atendimento@socialsolution.com.br">atendimento@socialsolution.com.br</a>
 
                     <h3>Whatsapp</h3>
-                    <a class="a-link" href="https://wa.me/554198380108?text=socialsolution.com.br">(41) 9838-0108</a>
+                    <a class="a-link" href="https://wa.me/000000000000?text=socialsolution.com.br">(00) 0000-0000</a>
 
                     <h3>Facebook e Instagram</h3>
                     <p>@socialsolutiondigital</p>
@@ -365,9 +365,9 @@
     </div> <!-- content id="contato" -->
 
     <div id="social-divscroll">
-        <a title="Veja o código deste site" class="social-link" href="https://github.com/thiagohauck/socialsolution">
+        <!-- <a title="Veja o código deste site" class="social-link" href="https://github.com/t-hauck/socialsolution">
             <i class="fab fa-github"></i>
-        </a>
+        </a> -->
 	    
         <a title="Siga-nos no Facebook" class="social-link" href="https://facebook.com/socialsolutiondigital" target="_blank">
             <i class="fab fa-facebook"> </i>
@@ -383,7 +383,7 @@
         </a>
         -->
 
-        <a title="Contato via WhatsApp" class="social-link" href="https://wa.me/554198380108?text=socialsolution.com.br">
+        <a title="Contato via WhatsApp" class="social-link" href="https://wa.me/000000000000?text=socialsolution.com.br">
             <i class="fab fa-whatsapp-square"> </i>
         </a>
 
